@@ -25,6 +25,8 @@ Version 1.3.1 (unreleased)
   - Crash at program termination when using global stxxl containers.
   - Enable syscall_file to read/write >=4GiB of data in a single I/O operation.
 * New public header: stxxl/stats
+* Parallel mode can be switched on for internal STXXL computation selectively, 
+  by defining STXXL_PARALLEL_MODE_EXPLICIT
 * Platform Support 
   - add ICPC 12.0, works with both MCSTL (needs libstdc++ from GCC 4.2) and
     parallel mode (needs libstdc++ from GCC 4.3 (not 4.4/4.5))
